# advent-of-code-py

./: .gitignore  .mise.toml  README.md  pyproject.toml
2025/day1/: test_main.py
2025/day2/: main.py  test_main.py
src/y2025/: day1.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
test/y2025/: test_day1.py  test_day2.py  test_day3.py  test_day4.py  test_day5.py  test_day6.py  test_day7.py  test_day8.py  test_day9.py
