[project]
name = "advent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Torsten Mangner", email = "tmangner@inoxio.de" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
advent = "advent:main"

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
